# dotfiles

./: .Xresources  .stalonetrayrc  .xinitrc
.config/gtk-2.0/: gtkfilechooser.ini
.config/gtk-3.0/: bookmarks  settings.ini
.config/i3/: .i3blocks.conf  config  config-old  i3blocks.conf
.config/i3blocks/: config
.config/kitty/: kitty.conf
.config/nvim/: .netrwhist  coc-settings.json  ginit.vim  init.vim
.config/pboy/: pboy.ini
.config/polybar/: config  launch.sh  playpause.sh  spotify.sh
.config/rofi/: config  config.rasi  oxide.rasi
.config/termite/: config
.config/xmobar/: xmobarrc
.config/xmobar/scripts/: battery  brightness  memory  net  time  volume
.stack/: config.yaml
.xmonad/: build  config.hs  sureyeaah-xmonad.cabal
.xmonad/sureyeaah-xmonad/: .gitignore  CHANGELOG.md  Main.hs  sureyeaah-xmonad.cabal
.zprezto/runcoms/: zlogin  zpreztorc  zprofile  zshenv  zshrc
